# write_a_data_science_blog_post_project

./: .gitignore  README.md  TODO.md  configuration.py  neighborhoods_sentiment_analysis.ipynb  pyproject.toml  requirements.txt  visuals.py
.github/: GITHUB.md
data/: DATA.md  quartieri.txt  quartieri.xlsx  summary_listings.csv
src/: config.py  visuals.py
tests/: test_config.py  test_jupyter_notebook.py  test_visuals.py
utils/: configuration.py  visuals.py
